# OpenACC-Practicecodes

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Results.csv  make.def
Bubble-Sort/: README.MD  bubbleacc.c
Cubes-OpenACC/: Makefile  README.md
DOTPRODUCT/: Makefile  README.md  Vector.c  dotproduct
DOTPRODUCT/.pwt/default/: config.json
DOTPRODUCT/.pwt/default/versions/src/dotproduct.c/: Original 4  dotproduct-atomic.c  dotproduct-privatization.c
DOTPRODUCT/DOTPRODUCT/src/: dotproduct.c  dotproduct_main.c
DOTPRODUCT/__MACOSX/DOTPRODUCT/: ._Makefile  ._README.md
DOTPRODUCT/__MACOSX/DOTPRODUCT/.pwt/default/versions/src/dotproduct.c/: ._dotproduct-reduction.c
DOTPRODUCT/__MACOSX/DOTPRODUCT/src/: ._Vector.c  ._dotproduct.c
DOTPRODUCT/src/: Vector.h  import owiener.py
Dijkstra-Algorithm/: Dijkstra_openacc.c  Makefile  README.MD
Gas-Particle-Simulation/: BoundBox.h  Makefile  README.md  main.c
Jacobi/: Makefile  README.md  jacobi.c
Jacobi/Jacobi/Parallel_Good/: laplace2d.c
Jacobi/Jacobi/Parallel_With_Updates/: jacobi.c
Jacobi/Jacobi/Serial/: jacobi.c
Jacobi/Parallel_Bad/: jacobi.c
Jacobi/Parallel_Good/: jacobi.c
Jacobi/Parallel_With_Updates/: laplace2d.h
Jacobi/Serial/: laplace2d.c
Knapsack-Problem/: Makefile  README.md  knapsack_dynamic_parallel.c  knapsack_problem.c
Matrix-Multiplication/: Makefile  README.md  matrix_multiplication_openacc.c
Matrix-Multiplication/Mini-Weather/: Makefile  README.md
Merge-sort/: mergeacc.c
Mini-Weather/: CMakeLists.txt  Makefile  README.md  main.c  mini_weather.F90  miniweather_mpi_openacc.cpp
Mini_Weather/Final/: Makefile
Newton-fractals/: Makefile  README.md  newton_fractals_openacc.c
OPENACC-PI/: README.md  pi.c
OPENACC-PI/OPENACC-PI/: Makefile
PI/: Makefile  README.md
Quick-Sort/: README.MD  quickacc.c
Ray-Tracer/: Makefile  README.MD  raytracer_parallel.cpp  timer.h
Raytracer-Project/: Makefile  README.md  main.c
cube-OpenACC/: Makefile  README.md  cubes_openacc.c
cube-OpenACC/__MACOSX/: ._cube-OpenACC
cube-OpenACC/__MACOSX/cube-OpenACC/: ._cubes_openacc.c  ._cubes_serial_eric.c
cube-OpenACC/cube-OpenACC/: cubes_serial_eric.c
miniweather/: Makefile  miniWeather_openacc_final.cpp  miniWeather_openacc_inter.cpp
src/Dijkstra-Algorithm/: Dijkstra_openacc.c  Makefile  README.MD
src/Gas-Particle-Simulation/: README.md  bitmap.h  draw2D.h  main.c  particle.h  physics.h
src/Jacobi/: Makefile  README.md
src/Knapsack-Problem/: README.md  knapsack_problem.c
src/Matrix-Multiplication/: Makefile  matrix_multiplication_openacc.c
src/Mini-Weather/: README.md
src/Newton-fractals/: README.md
src/Raytracer-Project/: Makefile  README.md  main.cpp
